--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -9,6 +9,11 @@
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 6rem;
   align-items: start;
+
+  @media only screen and (max-width: $bp-sm) {
+    margin: 5rem;
+    gap: 2rem;
+  }
 }
 
 .feature {
@@ -22,6 +27,10 @@
     height: 4.5rem;
     grid-row: 1 / span 2;
     transform: translateY(-1rem);
+
+    @media only screen and (max-width: $bp-md) {
+      transform: translateY(0);
+    }
   }
 
   &__text {
