--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -16,6 +16,10 @@
   align-items: center;
   flex-wrap: wrap;
 
+  @media only screen and (max-width: $bp-sm) {
+    justify-content: center;
+  }
+
   &__link:link,
   &__link:visited {
     display: block;
