--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -5,6 +5,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   gap: 7rem;
+
+  @media only screen and (max-width: $bp-sm) {
+    margin: 5rem 0;
+  }
 }
 
 .home {
