--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,12 +2,22 @@
   &__pictures {
     background-color: $color-primary-dark;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(rgba($color-primary, 0.5),rgba($color-primary, 0.5)), url(../img/back.jpg);
+    background-image: linear-gradient(
+        rgba($color-primary, 0.5),
+        rgba($color-primary, 0.5)
+      ),
+      url(../img/back.jpg);
+      background-size: cover;
 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-md) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -15,6 +25,10 @@
     grid-row: 2/6;
     grid-column: 2/6;
     box-shadow: 0 2rem 5rem rgba(#000, $alpha: 0.1);
+
+    @media only screen and (max-width: $bp-md) {
+      grid-area: 1 / 1 / -1 / 5;
+    }
   }
 
   &__img--2 {
@@ -25,6 +39,11 @@
     z-index: 10;
 
     box-shadow: 0 2rem 5rem rgba(#000, $alpha: 0.2);
+
+    @media only screen and (max-width: $bp-md) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -42,6 +61,10 @@
     grid-column: col-start 5 / full-end;
 
     padding: 6rem 8vw;
+
+    @media only screen and (max-width: $bp-md) {
+      grid-area: 5 / 1 / 6 / -1;
+    }
   }
 
   &__text {
